added integration test for progress service, fix bug accordingly